Issue #4547: Better alignment of 'Add new field' row on 'Manage fields' page.

--- a/core/modules/field_ui/css/field_ui.css
+++ b/core/modules/field_ui/css/field_ui.css
@@ -37,7 +37,6 @@
   display: none;
 }
 .field-ui-overview tr.add-new td {
-  vertical-align: top;
   white-space: nowrap;
 }
 
